--- a/example/rater/classification.ipynb
+++ b/example/rater/classification.ipynb
@@ -66,6 +66,7 @@
     "from uniflow.flow.config  import RaterClassificationConfig\n",
     "from uniflow.op.model.model_config  import OpenAIModelConfig\n",
     "from uniflow.op.prompt_schema import Context\n",
+    "from uniflow.op.op import OpScope\n",
     "\n",
     "load_dotenv()"
    ]
@@ -133,7 +134,8 @@
     "    flow_name=\"RaterFlow\",\n",
     "    model_config=OpenAIModelConfig(num_call=3, response_format={\"type\": \"json_object\"}),\n",
     "    label2score={\"Yes\": 1.0, \"No\": 0.0})\n",
-    "client = RaterClient(config)"
+    "with OpScope(name=\"JSONFlow\"):\n",
+    "    client = RaterClient(config)"
    ]
   },
   {
@@ -154,7 +156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:07<00:00,  2.42s/it]"
+      "100%|██████████| 3/3 [00:05<00:00,  1.81s/it]"
      ]
     },
     {
@@ -193,7 +195,7 @@
       "                            'question': 'What is the largest ocean on Earth?'}],\n",
       "              'scores': [1.0, 1.0, 1.0],\n",
       "              'votes': ['yes', 'yes', 'yes']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f0f8b1b6860>},\n",
+      "  'root': <uniflow.node.Node object at 0x7f7e95f229b0>},\n",
       " {'output': [{'average_score': 0.3333333333333333,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
@@ -237,8 +239,8 @@
       "                                        'constructed?'}],\n",
       "              'scores': [0.0, 0.0, 1.0],\n",
       "              'votes': ['no', 'no', 'yes']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f0fa838fbe0>},\n",
-      " {'output': [{'average_score': 0.3333333333333333,\n",
+      "  'root': <uniflow.node.Node object at 0x7f7e95f235e0>},\n",
+      " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
       "              'response': [{'answer': 'The human brain is responsible for '\n",
@@ -247,45 +249,47 @@
       "                                       'responsible for intelligence, memory, '\n",
       "                                       'and emotions. It is made up of '\n",
       "                                       'approximately 86 billion neurons.',\n",
-      "                            'explanation': 'The answer is incorrect as it does '\n",
-      "                                           'not align with the context '\n",
-      "                                           'provided about the brain being '\n",
-      "                                           'responsible for intelligence, '\n",
-      "                                           'memory, and emotions.',\n",
+      "                            'explanation': 'The answer is incorrect as the '\n",
+      "                                           'context explicitly mentions that '\n",
+      "                                           'the human brain is responsible for '\n",
+      "                                           'intelligence, memory, and '\n",
+      "                                           'emotions, not just physical '\n",
+      "                                           'movement.',\n",
       "                            'label': 'No',\n",
       "                            'question': 'What is the human brain responsible '\n",
       "                                        'for?'},\n",
-      "                           {'answer': 'The Eiffel Tower was constructed in '\n",
-      "                                      '1889.',\n",
-      "                            'context': 'The Eiffel Tower, located in Paris, '\n",
-      "                                       'France, is one of the most famous '\n",
-      "                                       'landmarks in the world. It was '\n",
-      "                                       'constructed in 1889 and stands at a '\n",
-      "                                       'height of 324 meters.',\n",
-      "                            'explanation': 'The context explicitly mentions '\n",
-      "                                           'that the Eiffel Tower was '\n",
-      "                                           'constructed in 1889, so the answer '\n",
-      "                                           'is correct.',\n",
-      "                            'label': 'Yes',\n",
-      "                            'question': 'When was the Eiffel Tower '\n",
-      "                                        'constructed?'},\n",
       "                           {'answer': 'The human brain is responsible for '\n",
       "                                      'physical movement.',\n",
       "                            'context': 'The human brain is an intricate organ '\n",
       "                                       'responsible for intelligence, memory, '\n",
       "                                       'and emotions. It is made up of '\n",
       "                                       'approximately 86 billion neurons.',\n",
-      "                            'explanation': 'The context explicitly states that '\n",
-      "                                           'the human brain is responsible for '\n",
+      "                            'explanation': 'The answer is incorrect as the '\n",
+      "                                           'context clearly states that the '\n",
+      "                                           'human brain is responsible for '\n",
       "                                           'intelligence, memory, and '\n",
-      "                                           'emotions, not physical movement, '\n",
-      "                                           'so the answer is incorrect.',\n",
+      "                                           'emotions, not physical movement.',\n",
+      "                            'label': 'No',\n",
+      "                            'question': 'What is the human brain responsible '\n",
+      "                                        'for?'},\n",
+      "                           {'answer': 'The human brain is responsible for '\n",
+      "                                      'physical movement.',\n",
+      "                            'context': 'The human brain is an intricate organ '\n",
+      "                                       'responsible for intelligence, memory, '\n",
+      "                                       'and emotions. It is made up of '\n",
+      "                                       'approximately 86 billion neurons.',\n",
+      "                            'explanation': 'The answer is incorrect as the '\n",
+      "                                           'context explicitly states that the '\n",
+      "                                           'human brain is responsible for '\n",
+      "                                           'intelligence, memory, and '\n",
+      "                                           'emotions, not just physical '\n",
+      "                                           'movement.',\n",
       "                            'label': 'No',\n",
       "                            'question': 'What is the human brain responsible '\n",
       "                                        'for?'}],\n",
-      "              'scores': [0.0, 1.0, 0.0],\n",
-      "              'votes': ['no', 'yes', 'no']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f0f8b1b7eb0>}]\n"
+      "              'scores': [0.0, 0.0, 0.0],\n",
+      "              'votes': ['no', 'no', 'no']}],\n",
+      "  'root': <uniflow.node.Node object at 0x7f7e945c80a0>}]\n"
      ]
     },
     {
@@ -341,7 +345,7 @@
      "text": [
       "data 0 has majority vote \u001b[31myes\u001b[0m and average score \u001b[34m1.0\u001b[0m\n",
       "data 1 has majority vote \u001b[31mno\u001b[0m and average score \u001b[34m0.3333333333333333\u001b[0m\n",
-      "data 2 has majority vote \u001b[31mno\u001b[0m and average score \u001b[34m0.3333333333333333\u001b[0m\n"
+      "data 2 has majority vote \u001b[31mno\u001b[0m and average score \u001b[34m0.0\u001b[0m\n"
      ]
     }
    ],
@@ -377,7 +381,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:02<00:00,  1.15it/s]"
+      "100%|██████████| 3/3 [00:02<00:00,  1.36it/s]"
      ]
     },
     {
@@ -387,18 +391,19 @@
       "[{'output': [{'average_score': 1.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'yes',\n",
-      "              'response': ['explanation: The context explicitly states that '\n",
-      "                           'the Pacific Ocean is the largest ocean on Earth, '\n",
-      "                           'so the answer is correct.\\n'\n",
+      "              'response': ['\\n'\n",
+      "                           'explanation: The answer directly addresses the '\n",
+      "                           'question and provides the correct information '\n",
+      "                           'based on the context.\\n'\n",
+      "                           'label: Yes',\n",
       "                           'label: Yes',\n",
       "                           'explanation: The context explicitly states that '\n",
       "                           'the Pacific Ocean is the largest ocean on Earth, '\n",
       "                           'so the answer is correct.\\n'\n",
-      "                           'label: Yes',\n",
       "                           'label: Yes'],\n",
       "              'scores': [1.0, 1.0, 1.0],\n",
       "              'votes': ['yes', 'yes', 'yes']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f0f8b2675b0>},\n",
+      "  'root': <uniflow.node.Node object at 0x7f7e95f23310>},\n",
       " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
@@ -406,7 +411,7 @@
       "                           'Shakespeare wrote 39 plays, so the answer is '\n",
       "                           'incorrect.\\n'\n",
       "                           'label: No',\n",
-      "                           'explanation: The context explicitly states that '\n",
+      "                           'explanation: The context explicitly mentions that '\n",
       "                           'Shakespeare wrote 39 plays, so the answer is '\n",
       "                           'incorrect.\\n'\n",
       "                           'label: No',\n",
@@ -416,13 +421,13 @@
       "                           'label: No'],\n",
       "              'scores': [0.0, 0.0, 0.0],\n",
       "              'votes': ['no', 'no', 'no']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f0f8b2673a0>},\n",
+      "  'root': <uniflow.node.Node object at 0x7f7e95f23550>},\n",
       " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
       "              'response': ['explanation: The context mentions that the human '\n",
       "                           'brain is responsible for intelligence, memory, and '\n",
-      "                           'emotions, not just physical movement, so the '\n",
+      "                           'emotions, not just physical movement. So the '\n",
       "                           'answer is incorrect.\\n'\n",
       "                           'label: No',\n",
       "                           'explanation: The context mentions that the human '\n",
@@ -432,12 +437,12 @@
       "                           'label: No',\n",
       "                           'explanation: The context mentions that the human '\n",
       "                           'brain is responsible for intelligence, memory, and '\n",
-      "                           'emotions, not just physical movement, so the '\n",
-      "                           'answer is incorrect.\\n'\n",
+      "                           'emotions, not physical movement. The answer is '\n",
+      "                           'incorrect.\\n'\n",
       "                           'label: No'],\n",
       "              'scores': [0.0, 0.0, 0.0],\n",
       "              'votes': ['no', 'no', 'no']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f0f8b1dbac0>}]\n"
+      "  'root': <uniflow.node.Node object at 0x7f7e9467a620>}]\n"
      ]
     },
     {
@@ -449,13 +454,12 @@
     }
    ],
    "source": [
-    "del client # delete previous client \n",
-    "\n",
     "config = RaterClassificationConfig(\n",
     "    flow_name=\"RaterFlow\",\n",
     "    model_config=OpenAIModelConfig(num_call=3, response_format={\"type\": \"text\"}),\n",
     "    label2score={\"Yes\": 1.0, \"No\": 0.0})\n",
-    "client = RaterClient(config)\n",
+    "with OpScope(name=\"TextFlow\"):\n",
+    "    client = RaterClient(config)\n",
     "output = client.run(data)\n",
     "pprint.pprint(output)"
    ]
@@ -476,8 +480,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('explanation: The context explicitly states that the Pacific Ocean is the '\n",
-      " 'largest ocean on Earth, so the answer is correct.\\n'\n",
+      "('\\n'\n",
+      " 'explanation: The answer directly addresses the question and provides the '\n",
+      " 'correct information based on the context.\\n'\n",
       " 'label: Yes')\n"
      ]
     }
