fix: resolve comments in pr

--- a/example/rater/bedrock_classification.ipynb
+++ b/example/rater/bedrock_classification.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use AutoRater to Assess Question Answer Accuracy using Bedrock from a Jupyter Notebook\n",
+    "\n",
+    "In this example, we will show you how to use AutoRater to verify the correctness of an answer to a given question and context pairs.\n",
+    "\n",
+    "### Before running the code\n",
+    "\n",
+    "You will need to `uniflow` conda environment to run this notebook. You can set up the environment following the instruction: https://github.com/CambioML/uniflow/tree/main#installation.\n",
+    "\n",
+    "Next, you will need a valid [AWS CLI profile](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-files.html) to run the code. You can set up the profile by running `aws configure --profile <profile_name>` in your terminal. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import dependency\n",
+    "First, we set system paths and import libraries."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -68,7 +91,8 @@
        "  'ExtractMarkdownFlow',\n",
        "  'ExtractPDFFlow',\n",
        "  'ExtractTxtFlow'],\n",
-       " 'transform': ['TransformCopyFlow',\n",
+       " 'transform': ['TransformAzureOpenAIFlow',\n",
+       "  'TransformCopyFlow',\n",
        "  'TransformHuggingFaceFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow'],\n",
@@ -85,8 +109,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare the input data\n",
+    "\n",
+    "We use 3 example data. Each one is a tuple with context, question and answer to be labeled. The grounding truth label of first one is correct and other are incorrect. Then we use `Context` class to wrap them.\n",
+    "   "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +147,19 @@
     "    Context(context=c[0], question=c[1], answer=c[2])\n",
     "    for c in raw_input\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up config: JSON format\n",
+    "\n",
+    "In this example, we will use the BedrockModelConfig as the default LLM to generate questions and answers. If you want to use open-source models, you can replace the `BedrockModelConfig` with `HuggingfaceConfig` and [`HuggingfaceModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L27).\n",
+    "\n",
+    "We use the default `guided_prompt` in `RaterClassificationConfig`, which contains two examples, labeled by Yes and No. The default examples are also wrap by `Context` class with fileds of context, question, answer (and label), consistent with input data.\n",
+    "\n",
+    "The response format is `json`, so the model returns json object as output instead of plain text, which can be processed more conveniently. "
    ]
   },
   {
@@ -124,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RaterConfig(flow_name='RaterFlow', model_config={'model_name': 'anthropic.claude-v2', 'model_server': 'BedrockModelServer', 'batch_size': 1, 'aws_profile': 'default', 'aws_region': 'us-west-2', 'model_kwargs': {'temperature': 0.1}}, label2score={'Yes': 1.0, 'No': 0.0}, guided_prompt_template=GuidedPrompt(instruction='Rate the answer based on the question and the context.\\n        Follow the format of the examples below to include context, question, answer, and label in the response.\\n        The response should not include examples in the prompt.', examples=[Context(context='The Eiffel Tower, located in Paris, France, is one of the most famous landmarks in the world. It was constructed in 1889 and stands at a height of 324 meters.', question='When was the Eiffel Tower constructed?', answer='The Eiffel Tower was constructed in 1889.', explanation='The context explicitly mentions that the Eiffel Tower was constructed in 1889, so the answer is correct.', label='Yes'), Context(context='Photosynthesis is a process used by plants to convert light energy into chemical energy. This process primarily occurs in the chloroplasts of plant cells.', question='Where does photosynthesis primarily occur in plant cells?', answer='Photosynthesis primarily occurs in the mitochondria of plant cells.', explanation='The context mentions that photosynthesis primarily occurs in the chloroplasts of plant cells, so the answer is incorrect.', label='No')]), num_thread=1)\n"
+      "RaterConfig(flow_name='RaterFlow', model_config={'aws_region': 'us-west-2', 'aws_profile': 'default', 'aws_access_key_id': '', 'aws_secret_access_key': '', 'aws_session_token': '', 'model_name': 'anthropic.claude-v2', 'batch_size': 1, 'model_server': 'BedrockModelServer', 'model_kwargs': {'temperature': 0.1}}, label2score={'Yes': 1.0, 'No': 0.0}, guided_prompt_template=GuidedPrompt(instruction='Rate the answer based on the question and the context.\\n        Follow the format of the examples below to include context, question, answer, and label in the response.\\n        The response should not include examples in the prompt.', examples=[Context(context='The Eiffel Tower, located in Paris, France, is one of the most famous landmarks in the world. It was constructed in 1889 and stands at a height of 324 meters.', question='When was the Eiffel Tower constructed?', answer='The Eiffel Tower was constructed in 1889.', explanation='The context explicitly mentions that the Eiffel Tower was constructed in 1889, so the answer is correct.', label='Yes'), Context(context='Photosynthesis is a process used by plants to convert light energy into chemical energy. This process primarily occurs in the chloroplasts of plant cells.', question='Where does photosynthesis primarily occur in plant cells?', answer='Photosynthesis primarily occurs in the mitochondria of plant cells.', explanation='The context mentions that photosynthesis primarily occurs in the chloroplasts of plant cells, so the answer is incorrect.', label='No')]), num_thread=1)\n"
      ]
     }
    ],
@@ -137,15 +184,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run client\n",
+    "\n",
+    "Then we can run the client. For each item in the raw_input, the Client will generate an explanation and a final label Yes or No. The label is decided by taking the majority votes from sampling the LLM output 3 times, which improved stability and self-consistency compared with outputting 1 time.\n",
+    "   "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:08<00:00,  2.99s/it]"
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:12<00:00,  4.14s/it]"
      ]
     },
     {
@@ -183,7 +247,7 @@
       "                           'label: Yes'],\n",
       "              'scores': [1.0],\n",
       "              'votes': ['yes']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f26f314d840>},\n",
+      "  'root': <uniflow.node.Node object at 0x7f5aec68ad40>},\n",
       " {'output': [{'average_score': 1.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'yes',\n",
@@ -193,14 +257,10 @@
       "                           \"'Hamlet' and 'Romeo and Juliet'.\\n\"\n",
       "                           'question: How many plays did Shakespeare write?\\n'\n",
       "                           'answer: Shakespeare wrote 39 plays.\\n'\n",
-      "                           'label: Yes\\n'\n",
-      "                           'explanation: The context states that Shakespeare '\n",
-      "                           'wrote 39 plays during his lifetime, so the answer '\n",
-      "                           'accurately matches the information provided in the '\n",
-      "                           'context.'],\n",
+      "                           'label: Yes'],\n",
       "              'scores': [1.0],\n",
       "              'votes': ['yes']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f2711729f30>},\n",
+      "  'root': <uniflow.node.Node object at 0x7f5afe68b7f0>},\n",
       " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
@@ -214,12 +274,13 @@
       "                           'physical movement.\\n'\n",
       "                           'explanation: The context states that the human '\n",
       "                           'brain is responsible for intelligence, memory, and '\n",
-      "                           'emotions. The answer incorrectly states it is '\n",
-      "                           'responsible for physical movement.\\n'\n",
+      "                           'emotions. The answer states it is responsible for '\n",
+      "                           'physical movement, which contradicts the '\n",
+      "                           'information in the context.\\n'\n",
       "                           'label: No'],\n",
       "              'scores': [0.0],\n",
       "              'votes': ['no']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f26f314d9f0>}]\n"
+      "  'root': <uniflow.node.Node object at 0x7f5aec68afe0>}]\n"
      ]
     },
     {
@@ -236,8 +297,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that model response is a json object."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(' context: The Eiffel Tower, located in Paris, France, is one of the most '\n",
+      " 'famous landmarks in the world. It was constructed in 1889 and stands at a '\n",
+      " 'height of 324 meters.\\n'\n",
+      " 'question: When was the Eiffel Tower constructed?\\n'\n",
+      " 'answer: The Eiffel Tower was constructed in 1889.\\n'\n",
+      " 'label: Yes\\n'\n",
+      " '\\n'\n",
+      " 'context: Photosynthesis is a process used by plants to convert light energy '\n",
+      " 'into chemical energy. This process primarily occurs in the chloroplasts of '\n",
+      " 'plant cells.  \\n'\n",
+      " 'question: Where does photosynthesis primarily occur in plant cells?\\n'\n",
+      " 'answer: Photosynthesis primarily occurs in the mitochondria of plant cells.\\n'\n",
+      " 'label: No\\n'\n",
+      " '\\n'\n",
+      " \"context: The Pacific Ocean is the largest and deepest of Earth's oceanic \"\n",
+      " 'divisions. It extends from the Arctic Ocean in the north to the Southern '\n",
+      " 'Ocean in the south.\\n'\n",
+      " 'question: What is the largest ocean on Earth?  \\n'\n",
+      " 'answer: The largest ocean on Earth is the Pacific Ocean.\\n'\n",
+      " 'label: Yes')\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pprint(output[0][\"output\"][0][\"response\"][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
