--- a/example/rater/classification.ipynb
+++ b/example/rater/classification.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use AutoRater to Assess Question Answer Accuracy from a Jupyter Notebook\n",
+    "# Use `AutoRater` to Evaluate Answer Completeness and Accuracy for Given Questions\n",
     "\n",
     "In this example, we will show you how to use AutoRater to verify the correctness of an answer to a given question and context pairs.\n",
     "\n",
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import dependency\n",
+    "### Import the dependency\n",
     "First, we set system paths and import libraries."
    ]
   },
@@ -77,7 +77,7 @@
    "source": [
     "### Prepare the input data\n",
     "\n",
-    "We use 3 example data. Each one is a tuple with context, question and answer to be labeled. The grounding truth label of first one is correct and other are incorrect. Then we use `Context` class to wrap them."
+    "We use 3 example raw inputs. Each one is a tuple with context, question and answer to be labeled. The grounding truth label of first one is correct and other are incorrect. Then we use `Context` class to wrap them."
    ]
   },
   {
@@ -97,6 +97,7 @@
     "     \"What is the human brain responsible for?\",\n",
     "     \"The human brain is responsible for physical movement.\"), # incorrect\n",
     "]\n",
+    "\n",
     "data = [\n",
     "    Context(context=c[0], question=c[1], answer=c[2])\n",
     "    for c in raw_input\n",
@@ -107,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up config: JSON format\n",
+    "### Set up the config: JSON format\n",
     "\n",
     "In this example, we will use the [`OpenAIModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17) as the default LLM to generate questions and answers. If you want to use open-source models, you can replace the `OpenAIConfig` and `OpenAIModelConfig` with `HuggingfaceConfig` and [`HuggingfaceModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L27).\n",
     "\n",
@@ -134,6 +135,7 @@
     "    flow_name=\"RaterFlow\",\n",
     "    model_config=OpenAIModelConfig(num_call=3, response_format={\"type\": \"json_object\"}),\n",
     "    label2score={\"Yes\": 1.0, \"No\": 0.0})\n",
+    "\n",
     "with OpScope(name=\"JSONFlow\"):\n",
     "    client = RaterClient(config)"
    ]
@@ -142,9 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run client\n",
+    "### Run the client\n",
     "\n",
-    "Then we can run the client. For each item in the raw_input, the Client will generate an explanation and a final label Yes or No. The label is decided by taking the majority votes from sampling the LLM output 3 times, which improved stability and self-consistency compared with outputting 1 time."
+    "Then we can run the client. For each item in the `raw_input`, the Client will generate an explanation and a final label `Yes` or `No`. The label is decided by taking the majority votes from sampling the LLM output 3 times, which improved stability and self-consistency compared with outputting only one time."
    ]
   },
   {
@@ -458,9 +460,12 @@
     "    flow_name=\"RaterFlow\",\n",
     "    model_config=OpenAIModelConfig(num_call=3, response_format={\"type\": \"text\"}),\n",
     "    label2score={\"Yes\": 1.0, \"No\": 0.0})\n",
+    "\n",
     "with OpScope(name=\"TextFlow\"):\n",
     "    client = RaterClient(config)\n",
+    "\n",
     "output = client.run(data)\n",
+    "\n",
     "pprint.pprint(output)"
    ]
   },
@@ -468,27 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that model response is a single string."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('\\n'\n",
-      " 'explanation: The answer directly addresses the question and provides the '\n",
-      " 'correct information based on the context.\\n'\n",
-      " 'label: Yes')\n"
-     ]
-    }
-   ],
-   "source": [
-    "pprint.pprint(output[0][\"output\"][0][\"response\"][0])"
+    "The model's responses can be distilled into majority votes, as shown below. Given the non-deterministic nature of the LLM (where each inference could yield a different output), we've enhanced stability and self-consistency by averaging results from three LLM output samplings, a notable improvement over single-output scenarios."
    ]
   },
   {
