--- a/example/rater/generated_answer.ipynb
+++ b/example/rater/generated_answer.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use AutoRater to Compare Answers to a Given Question from a Jupyter Notebook\n",
+    "# Use `AutoRater` to Compare Answers to Given Questions\n",
     "\n",
-    "In this example, we will show you how to use autorater to compare a generated answer to a Given Question from a given jupyter notebook.\n",
+    "In this example, we will show you how to use autorater to compare a generated answer to Given Questions.\n",
     "\n",
     "### Before running the code\n",
     "\n",
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import dependency\n",
+    "### Import the dependency\n",
     "First, we set system paths and import libraries."
    ]
   },
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up config\n",
+    "### Set up the config\n",
     "\n",
     "In this example, we will use the [`OpenAIModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17) as the default LLM to generate questions and answers. If you want to use open-source models, you can replace the `OpenAIConfig` and `OpenAIModelConfig` with `HuggingfaceConfig` and [`HuggingfaceModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L27).\n",
     "\n",
@@ -149,9 +149,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run client\n",
+    "### Run the client\n",
     "\n",
-    "Then we can run the client. For each item in the raw_input, the Client will generate an explanation and a final label [`Strong accept`, `Accept`, `Equivalent`, `Reject`, `Strong reject`] . The label is decided by taking the majority votes from sampling the LLM output 3 times, which improved stability compared with outputting 1 time."
+    "Then we can run the client. For each item in the raw_input, the Client will generate an explanation and a final label [`Strong accept`, `Accept`, `Equivalent`, `Reject`, `Strong reject`] . The label is decided by taking the majority votes from sampling the LLM output 3 times, which improved stability compared with outputting only one time."
    ]
   },
   {
@@ -377,6 +377,13 @@
    "source": [
     "output = client.run(data)\n",
     "pprint.pprint(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model's responses can be distilled into majority votes, as shown below. Given the non-deterministic nature of the LLM (where each inference could yield a different output), we've enhanced stability and self-consistency by averaging results from three LLM output samplings, a notable improvement over single-output scenarios."
    ]
   },
   {
