correct grammar errors

--- a/example/rater/classification.ipynb
+++ b/example/rater/classification.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "### Prepare the input data\n",
     "\n",
-    "We use 3 example raw inputs. Each one is a tuple with context, question and answer to be labeled. The grounding truth label of first one is correct and other are incorrect. Then we use `Context` class to wrap them."
+    "We use three example raw inputs. Each one is a tuple consisting of context, question, and answer to be labeled. The ground truth label of the first one is 'correct', and the others are 'incorrect'. Then, we use the Context class to wrap them."
    ]
   },
   {
@@ -108,13 +108,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up the config: JSON format\n",
+    "## Set up the config: JSON format\n",
     "\n",
     "In this example, we will use the [`OpenAIModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17) as the default LLM to generate questions and answers. If you want to use open-source models, you can replace the `OpenAIConfig` and `OpenAIModelConfig` with `HuggingfaceConfig` and [`HuggingfaceModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L27).\n",
     "\n",
-    "We use the default `guided_prompt` in `RaterClassificationConfig`, which contains two examples, labeled by Yes and No. The default examples are also wrap by `Context` class with fileds of context, question, answer (and label), consistent with input data.\n",
+    "We utilize the default `guided_prompt` in `RaterClassificationConfig`, which includes two examples, labeled 'Yes' and 'No'. The default examples are also encapsulated within the `Context` class, which has fields for context, question, answer (and label), aligning with the input data format.\n",
     "\n",
-    "The response format is `json`, so the model returns json object as output instead of plain text, which can be processed more conveniently. "
+    "The response format is JSON, enabling the model to return a JSON object as output rather than plain text. This facilitates more convenient processing."
    ]
   },
   {
@@ -146,7 +146,7 @@
    "source": [
     "### Run the client\n",
     "\n",
-    "Then we can run the client. For each item in the `raw_input`, the Client will generate an explanation and a final label `Yes` or `No`. The label is decided by taking the majority votes from sampling the LLM output 3 times, which improved stability and self-consistency compared with outputting only one time."
+    "Then we can run the client. For each item in the `raw_input`, the Client will generate an explanation and a final label, either `Yes` or `No`. The label is determined by taking the majority vote from three samples of the LLM's output, which improves stability and self-consistency compared to generating a single output."
    ]
   },
   {
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that model response is a json object."
+    "We can see that model response is a JSON object."
    ]
   },
   {
@@ -334,6 +334,13 @@
    ],
    "source": [
     "pprint.pprint(output[0][\"output\"][0][\"response\"][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model's responses can be distilled into majority votes, as shown below. Given the non-deterministic nature of the LLM (where each inference could yield a different output), we've enhanced stability and self-consistency by averaging results from three LLM output samplings, a notable improvement over single-output scenarios."
    ]
   },
   {
@@ -362,9 +369,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up config: Text format\n",
+    "## Set up the config: Text format\n",
     "\n",
-    "Follow the previous setting we change `response_format={\"type\": \"text\"}` passed to `OpenAIModelConfig`, so model will output plain text instead of json object. In this case, AutoRater will use a regex to match label."
+    "Following the previous settings, we changed `response_format={\"type\": \"text\"}` passed to `OpenAIModelConfig`, so the model will output plain text instead of a JSON object. In this case, AutoRater will use a regex to match the label."
    ]
   },
   {
