--- a/example/rater/generated_answer.ipynb
+++ b/example/rater/generated_answer.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "### Prepare the input data\n",
     "\n",
-    "We use 3 example data. Each one is a tuple with context, question, grounding answer and generated answer to be labeled.  Then we use `Context` class to wrap them."
+    "We use 3 sample raw inputs. Each one is a tuple with context, question, ground truth answer and generated answer to be labeled.  Then we use the `Context` class to wrap them."
    ]
   },
   {
@@ -100,6 +100,7 @@
     "     \"Yes, Vitamin C is a very water-soluble vitamin.\",\n",
     "     \"Yes, Vitamin C can be dissolved in water well.\"), # Equally good\n",
     "]\n",
+    "\n",
     "data = [\n",
     "    Context(context=c[0], question=c[1], grounding_answer=c[2], generated_answer=c[3])\n",
     "    for c in raw_input\n",
@@ -112,9 +113,9 @@
    "source": [
     "### Set up the config\n",
     "\n",
-    "In this example, we will use the [`OpenAIModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17) as the default LLM to generate questions and answers. If you want to use open-source models, you can replace the `OpenAIConfig` and `OpenAIModelConfig` with `HuggingfaceConfig` and [`HuggingfaceModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L27).\n",
+    "In this example, we use the [`OpenAIModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L17) as the default LLM to generate questions and answers. If you want to use open-source models, you can replace `OpenAIConfig` and `OpenAIModelConfig` with `HuggingfaceConfig` and [`HuggingfaceModelConfig`](https://github.com/CambioML/uniflow/blob/main/uniflow/model/config.py#L27).\n",
     "\n",
-    "We use the default `guided_prompt` in `RaterForGeneratedAnswerConfig`, which contains five examples(one shot per class), labeled by `Strong accept`, `Accept`, `Equivalent`, `Reject` and `Strong reject`. The default examples are also wrap by `Context` class with fileds of context, question, grounding answer, generated answer (and label), consistent with input data.\n"
+    "We use the default `guided_prompt` in `RaterForGeneratedAnswerConfig`, which contains five examples (one shot per class), labeled as `Strong accept`, `Accept`, `Equivalent`, `Reject` and `Strong reject`. The default examples are also wrapped in the `Context` class with fields of context, question, grounding answer, generated answer (and label), ensuring consistency with the input data.\n"
    ]
   },
   {
@@ -142,6 +143,7 @@
     "        \"strong reject\": -2.0,\n",
     "    }\n",
     ")\n",
+    "\n",
     "client = RaterClient(config)"
    ]
   },
@@ -151,7 +153,7 @@
    "source": [
     "### Run the client\n",
     "\n",
-    "Then we can run the client. For each item in the raw_input, the Client will generate an explanation and a final label [`Strong accept`, `Accept`, `Equivalent`, `Reject`, `Strong reject`] . The label is decided by taking the majority votes from sampling the LLM output 3 times, which improved stability compared with outputting only one time."
+    "Then, we can run the client. For each item in the raw input, the Client will generate an explanation and a final label [`Strong accept`, `Accept`, `Equivalent`, `Reject`, `Strong reject`]. The label is determined by taking the majority vote from three samples of the LLM output, which improves stability compared to generating a single output."
    ]
   },
   {
